# financeGUI

./: .gitignore  CMakeLists.txt  README.md
data/: default_config.txt  dummy_db.db
financeGUI_autogen/: moc_predefs.h
financeGUI_autogen/UVLADIE3JM/: moc_database.cpp  moc_mainwindow.cpp
financeGUI_autogen/include/: ui_mainwindow.h
helper/: dateconversion.py
src/: DbManager.cpp  DbManager.h  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
